# wraith

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/codeguard-api-guard/src/: context_match.rs  introspect.rs  known_functions.rs  lib.rs
crates/codeguard-ast/: Cargo.toml
crates/codeguard-ast/benches/: parse_bench.rs
crates/codeguard-ast/src/: extract.rs  import_graph.rs  lib.rs  symbols.rs  tests.rs
crates/codeguard-cli/src/: main.rs
crates/codeguard-core/src/: config.rs  diagnostic.rs  noqa.rs  reporter.rs  rules.rs  tests.rs
crates/codeguard-phantom/src/: checker.rs  known_packages.rs  lib.rs
crates/codeguard-vibe/: Cargo.toml
crates/codeguard-vibe/src/: lib.rs  project.rs  taint.rs
python/codeguard/src/: lib.rs
python/wraith/src/: lib.rs
scripts/: benchmark_ai_repos.py
tests/fixtures/: bare_calls.py  context_mismatch.py
