[workspace]
resolver = "2"
members = [
    "crates/codeguard-core",
    "crates/codeguard-ast",
    "crates/codeguard-api-guard",
    "crates/codeguard-phantom",
    "crates/codeguard-vibe",
    "crates/codeguard-cli",
    "python/codeguard",
]
default-members = [
    "crates/codeguard-core",
    "crates/codeguard-ast",
    "crates/codeguard-api-guard",
    "crates/codeguard-phantom",
    "crates/codeguard-vibe",
    "crates/codeguard-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
codeguard-core = { path = "crates/codeguard-core" }
codeguard-ast = { path = "crates/codeguard-ast" }
codeguard-api-guard = { path = "crates/codeguard-api-guard" }
codeguard-phantom = { path = "crates/codeguard-phantom" }
codeguard-vibe = { path = "crates/codeguard-vibe" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
regex = "1"
strsim = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
pyo3 = { version = "0.22", features = ["extension-module"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
colored = "2"
once_cell = "1"
