[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wraith"
version = "0.2.0"
description = "Deterministic linter for AI-generated Python code"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
keywords = ["linter", "ai", "code-quality", "hallucination", "python", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/Seinarukiro2/wraith"

[tool.maturin]
manifest-path = "crates/codeguard-cli/Cargo.toml"
bindings = "bin"
strip = true
